# codesloop

./: .gitignore  CMakeLists.txt  LICENSE.BSD  README.markdown  index.html  run_tests.sh
comm/: CMakeLists.txt  LICENSE.BSD  README.markdown  bfd.cc  bfd.hh  connid.hh  csl_comm.hh  exc.cc  exc.hh  handler.cc  handler.hh  initcomm.cc  initcomm.hh  rdbuf.hh  read_res.cc  read_res.hh  sai.hh  tcp_client.cc  tcp_client.hh  tcp_conn.hh  tcp_handler.cc  tcp_handler.hh  tcp_lstnr.cc  tcp_lstnr.hh  udp_auth.cc  udp_auth.hh  udp_data.cc  udp_data.hh  udp_hello.cc  udp_hello.hh  udp_recvr.cc  udp_recvr.hh  wsa.cc  wsa.hh
comm/src/: CMakeLists.txt  cb.hh  chann.cc  chann.hh  csl_comm.hh  exc.cc  exc.hh  lstnr.cc  sai.hh  session_data.hh  sock.cc  sock.hh  sockthr.cc  sockthr.hh  synchsock.cc  synchsock.hh  toberemoved_udp.cc  toberemoved_udp.hh  toberemoved_udp_chann.cc  toberemoved_udp_chann.hh  toberemoved_udp_hello_entry.cc  toberemoved_udp_pkt.hh  udp.cc  udp.hh  udp_ack_rand.cc  udp_ack_rand.hh  udp_auth.cc  udp_auth.hh  udp_auth_entry.cc  udp_auth_entry.hh  udp_chann.cc  udp_chann.hh  udp_chann_entry.cc  udp_chann_entry.hh  udp_chann_queue.hh  udp_cli.cc  udp_cli.hh  udp_data.cc  udp_data.hh  udp_data_entry.cc  (+29 more)
comm/test/: CMakeLists.txt  t__chns.cc  t__comm_iface.cc  t__mt_udp.cc  t__synchsock.cc  t__udp_auth_client.cc  t__udp_auth_server.cc  t__udp_client.cc  t__udp_data_client.cc  t__udp_data_server.cc  t__udp_hello_client.cc  t__udp_hello_server.cc  t__udp_pkt.cc  t__udp_server.cc  t__udp_server2.cc
common/: CMakeLists.txt  README.markdown  README.markdown.old  arch.cc  arch.hh  auto_close.hh  binry.cc  binry.hh  cexc.cc  cexc.hh  circbuf.hh  common.h  csl_common.hh  dbl.cc  dbl.hh  exc.cc  exc.hh  hash.cc  hash.hh  hash_helpers.hh  hash_macros.hh  hlprs.cc  hlprs.hh  inpvec.hh  inpvec_impl.hh  int64.cc  int64.hh  limited_work_buffer.hh  logger.cc  logger.hh  mpool.hh  obj.cc  obj.hh  pbuf.cc  pbuf.hh  preallocated_array.hh  preallocated_array_impl.hh  pvlist.hh  queue.hh  queue_impl.hh  (+19 more)
common/libev/: CMakeLists.txt  config.h-FreeBSD  config.h-Linux  config.h-Linux-i686  evwrap.c  evwrap.h
common/src/: CMakeLists.txt  README.markdown  arch.cc  arch.hh  binry.cc  binry.hh  cexc.cc  cexc.hh  circbuf.hh  common.h  csl_common.hh  dbl.cc  dbl.hh  exc.cc  exc.hh  hash.cc  hash.hh  hash_helpers.hh  hash_macros.hh  hlprs.cc  hlprs.hh  inpvec.hh  int64.cc  int64.hh  logger.cc  logger.hh  mpool.hh  obj.cc  obj.hh  pbuf.cc  pbuf.hh  pvlist.hh  serializable.hh  str.cc  str.hh  tbuf.hh  test_timer.c  test_timer.h  ustr.cc  ustr.hh  (+5 more)
common/test/: CMakeLists.txt  random.2048  t__binry.cc  t__circbuf.cc  t__dbl.cc  t__hash.cc  t__hash_exp.cc  t__hash_helpers.cc  t__inpvec.cc  t__int64.cc  t__logger.cc  t__mpool.cc  t__obj.cc  t__pbuf.cc  t__pvlist.cc  t__serial.cc  t__str.cc  t__tbuf.cc  t__ustr.cc  t__xdrbuf.cc  t__zfile.cc
db/: CMakeLists.txt  _shared_impl.cc  _shared_impl.hh  conn.cc  conn.hh  csl_slt3.hh  driver.cc  driver.hh  exc.cc  exc.hh  obj.cc  obj.hh  query.cc  query.hh  reg.cc  reg.hh  sql.cc  sql.hh  tran.cc  tran.hh  var.cc  var.hh
db/dummy/: CMakeLists.txt  driver.cc  driver.hh
db/mysql/: CMakeLists.txt  driver.cc  driver.hh
db/slt3/: CMakeLists.txt  LICENSE.BSD  _shared_impl.cc  _shared_impl.hh  conn.cc  conn.hh  csl_slt3.hh  driver.cc  driver.hh  obj.cc  obj.hh  query.cc  query.hh  reg.cc  reg.hh  sql.cc  sql.hh  tran.cc  tran.hh  var.cc  var.hh
db/src/: CMakeLists.txt
db/test/: CMakeLists.txt
example/: CMakeLists.txt  README.markdown  ex_sql1.cc  ex_sql2.cc  ex_thread1.cc  ex_thrpool.cc  ex_zfile1.cc  ex_zfile2.cc
mq/: CMakeLists.txt  lstnr.hh  mqfactory.cc  mqfactory.hh  msg.hh  qpid_lstnr.hh  qpid_msg.cc  qpid_msg.hh  qpid_sess.cc  qpid_sess.hh  sess.hh
mq/src/: CMakeLists.txt  lstnr.hh  msg.hh  qpid_lstnr.hh  qpid_msg.cc  qpid_sess.cc  qpid_sess.hh  sess.hh
mq/test/: CMakeLists.txt  t__qpid_sess.cc
nthread/test/: CMakeLists.txt  t__event.cc  t__mutex.cc  t__pevent.cc  t__pt_mutex.cc  t__thread.cc  t__thrpool.cc
rpc/src/: CMakeLists.txt  csl_rpc.rl  csrgen.hh  csrgen.rl  csrgen_main.cc  csrparser.cc  csrparser.hh  csrparser.rl  csrpc_types.hh  exc.cc  exc.hh  exp1.txt  exp2.txt  iface.cc  iface.hh  stub_base.cc  stub_base.hh  stub_client.cc  stub_client.hh  stub_header.cc  stub_header.hh  stub_server.cc  stub_server.hh
sched/test/: CMakeLists.txt  t__iface.cc  t__item.cc  t__peer.cc  t__schedule.cc
sec/: CMakeLists.txt  README.markdown.old  bignum.cc  bignum.hh  crypt_buf.cc  crypt_buf.hh  crypt_pkt.cc  crypt_pkt.hh  csl_sec.h  csl_sec.hh  ecdh_key.cc  ecdh_key.hh  exc.cc  exc.hh  gen_rand.cc  sha1_conv.cc  umac.h  umac_ae.h
sec/src/: CMakeLists.txt  bignum.cc  bignum.hh  crypt_buf.cc  crypt_buf.hh  crypt_pkt.cc  crypt_pkt.hh  csl_sec.h  csl_sec.hh  ecdh_key.cc  ecdh_key.hh  ecdh_pkt.cc  ecdh_pkt.hh  exc.cc  exc.hh  gen_rand.cc  sha1_conv.cc  umac.c  xdr_challenge.cc  xdr_challenge.hh  xdr_response.cc  xdr_response.hh
sec/test/: CMakeLists.txt  ecdh_test_add_cert.xdrbin  ecdh_test_addkey_dbg.xdrbin  ecdh_test_creds_cli.xdrbin  ecdh_test_creds_srv.xdrbin  openssl_commands.txt  random.1123  random.119  random.1934  random.27  random.279  random.28901  random.589  random.99  t__bignum.cc  t__crypt_buf.cc  t__crypt_pkt.cc  t__derive_ec_params.c  t__ecdh_key.cc  t__ecdh_pkt.cc  t__read_x509_cert.c  t__sha1.c  t__umac.cc  t__xdr_challenge.cc  t__xdr_response.cc
slt3/src/: CMakeLists.txt  README.markdown  _shared_impl.cc  _shared_impl.hh  conn.cc  conn.hh  csl_slt3.hh  exc.cc  exc.hh  obj.cc  obj.hh  param.cc  param.hh  query.cc  query.hh  reg.cc  reg.hh  sql.cc  sql.hh  synqry.cc  synqry.hh  tran.cc  tran.hh  var.cc  var.hh
slt3/test/: CMakeLists.txt  t__conn.cc  t__mapper.cc  t__obj.cc  t__param.cc  t__query.cc  t__reg.cc  t__sql_helper.cc  t__sqlite.cc  t__synqry.cc  t__tran.cc  t__var.cc
test/comm/: CMakeLists.txt  t__bfd.cc  t__mt_udp.cc  t__rdbuf.cc  t__tcp_client.cc  t__tcp_libev.cc  t__tcp_lstnr.cc  t__udp_auth_client.cc  t__udp_auth_server.cc  t__udp_data_client.cc  t__udp_data_server.cc  t__udp_hello_client.cc  (+1 more)
test/rpc/: exp1.txt  (+4 more)
(+233 files in other folders)
